--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ li {
     margin-left: .9rem;
     margin-top: .6rem;
     background-color: #CCC;
+    cursor: pointer;
 }
 
 .auxixons-toolbarr-container ul {
@@ -64,18 +65,6 @@ li {
     color: #80868A;
     font-size: 1.25rem;
     cursor: pointer;
-}
-
-
-/* notification container */
-
-.notification-container .receive-notification {
-    font-size: .9em;
-    margin-bottom: .4rem;
-}
-
-.activate-notification {
-    font-size: .8em;
 }
 
 
@@ -230,10 +219,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.concactinfo-container .user-photo {
-    margin-top: 0;
+    cursor: pointer;
 }
 
 .concactinfo-container .user-name {
